--- a/index.html
+++ b/index.html
@@ -6,9 +6,10 @@
     <meta http-equiv=X-UA-Compatible content="IE=edge" />
     <meta name=viewport content="width=device-width,initial-scale=1" />
     <title>Comment Widget - ReactJS</title>
-
-    <link rel="stylesheet" href="style.css" />
+    <link href="./assets/css/style.min.css" rel="stylesheet" />
   </head>
   <body>
+    <div class="main_wrap"></div>
+    <script src="./assets/js/main.js" charset="utf-8"></script>
   </body>
 </html>
