--- a/index.html
+++ b/index.html
@@ -10,6 +10,6 @@
   </head>
   <body>
     <div class="main_wrap"></div>
-    <script src="./assets/js/main.js" charset="utf-8"></script>
+    <script src="./assets/js/main.min.js" charset="utf-8"></script>
   </body>
 </html>
