+ Added page title * Replaced the list of comments

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <link href="./assets/css/style.min.css" rel="stylesheet" />
   </head>
   <body>
+    <h1 class="page_title">React Comments</h1>
     <div class="main_wrap"></div>
     <script src="./assets/js/main.min.js" charset="utf-8"></script>
   </body>
