--- a/index.html
+++ b/index.html
@@ -16,5 +16,15 @@
     <h1 class="page_title">React Comments</h1>
     <div class="main_wrap"></div>
     <script src="./assets/js/main.min.js" charset="utf-8"></script>
+    <script>
+      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+      })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+      ga('create', 'UA-26049896-1', 'auto');
+      ga('send', 'pageview');
+
+    </script>
   </body>
 </html>
